--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@
     position: relative;
     width: 100%;
     height: 516px;
-    /* background-color: #ACACAC; */
+    background-color: #ACACAC;
 }
 .img-slider img{
     width: 80%;
