--- a/style.css
+++ b/style.css
@@ -96,12 +96,12 @@
     position: relative;
     width: 100%;
     height: 516px;
-    background-color: #ACACAC;
+/*     background-color: #ACACAC; */
 }
 .img-slider img{
     width: 80%;
     height: fit-content;
-    height: 516px;
+/*     height: 516px; */
 }
   .img-slider .slide{
     z-index: 1;
