--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@
 .img-slider img{
     width: 80%;
     height: fit-content;
-/*     height: 516px; */
+    height: 500px;
 }
   .img-slider .slide{
     z-index: 1;
@@ -206,6 +206,7 @@
     .img-slider img{
         width: 0%;
         height: fit-content;
+        height: 330px;
     }
       .img-slider .slide{
         z-index: 1;
